[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
name = "apodize"
version = "0.3.0"
description = "simple iterators that yield generalized cosine, hanning, hamming, blackman, nuttall and triangular windows"
documentation = "https://snd.github.io/apodize/apodize/index.html"
homepage = "https://github.com/snd/apodize"
repository = "https://github.com/snd/apodize.git"
readme = "README.md"
keywords = ["iterator", "window", "hanning", "hamming", "blackman"]
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
approx = "0.3.0"
